[project]
name = "qwen-vl-utils"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Qwen Team", email = "chenkeqin.ckq@alibaba-inc.com" },
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/qwen_vl_utils"]
