[project]
name = "qwen-vl-utils"
version = "0.1.0"
description = "Qwen Vision Language Model Utils - PyTorch"
authors = [
    { name = "Qwen Team", email = "chenkeqin.ckq@alibaba-inc.com" },
]
dependencies = [
    "torch>=2.0",
    "torchvision>=0.15.0",
    "requests>=2.0",
]
readme = "README.md"
requires-python = ">= 3.8"
license = { file = "LICENSE" }
keywords = [
    'large language model',
    'vision language model',
    'qwen-vl',
    'pytorch',
]
classifiers = [
    'Development Status :: 4 - Beta',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: MIT License',
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/qwen_vl_utils"]
